--- a/index.html
+++ b/index.html
@@ -182,16 +182,17 @@
     <!-- contact section -->
     <section class="contact scrollelement" id="contact">
       <h2 class="heading">Contact <span>Me!</span></h2>
-      <form action="#">
+      <form action="https://formspree.io/f/xzzzakja" method="post">
         <div class="input-box">
-          <input type="text" placeholder="Full Name" />
-          <input type="email" placeholder="Email Address" />
+          <input required name="name" type="text" placeholder="Full Name" />
+          <input required name="email" type="email" placeholder="Email Address" />
         </div>
         <div class="input-box">
-          <input type="number" placeholder="Mobile Number" />
-          <input type="email" placeholder="Email Subject" />
+          <input required name="mobile" type="number" placeholder="Mobile Number" />
+          <input required name="subject" type="email" placeholder="Email Subject" />
         </div>
         <textarea
+          required
           name=""
           id=""
           cols="30"
