--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
         <div class="input-box">
           <input required name="mobile" type="number" placeholder="Mobile Number" />
-          <input required name="subject" type="email" placeholder="Email Subject" />
+          <input required name="subject" type="text" placeholder="Email Subject" />
         </div>
         <textarea
           required
